=================
buildstream 1.3.1
=================

  o BREAKING CHANGE: `node_get_member` doesn't accept 'expected_type=Mapping'
    anymore. Please use 'expected_type=dict' instead.

  o BREAKING CHANGE: Artifact as a Proto. The caching of buildstream artifacts
    has changed from a reference based impelementation. Existing artifacts and
    artifact servers are not compatible, as such remote artifact servers need to
    be updated to the latest version which will then allow them to be repopulated
    with new artifacts.

  o BREAKING CHANGE: ostree plugin has been removed. It now leaves in the
    bst-plugins-experimental repo

  o BREAKING CHANGE: YAML New World Order. The parsing and loading of .bst files
    and node handling has been completely rewritten and is now faster. This now
    requires that plugin authors must use the Plugin API to access or modify node
    members. Regular dictionary accesses are no longer valid.

    This change has also removed the need of a YAML cache as it proved to no longer
    be of benefit.

  o Added `bst artifact delete` subcommand. This command removes artifacts from
    the local cache. Mulitple element names and artifact refs can be specified
    as arguments.

  o BREAKING CHANGE: The top level commands `checkout`, `push` and `pull` have
    been moved to the `bst artifact` subcommand group and are now obsolete.
    For example, you must now use `bst artifact pull hello.bst`.

    The behaviour of `checkout` has changed. The previously mandatory LOCATION
    argument should now be specified with the `--directory` option. In addition
    to this, `--tar` is no longer a flag, it is a mutually incompatible option
    to `--directory`. For example, `bst artifact checkout foo.bst --tar foo.tar.gz`.


  o Added `bst artifact log` subcommand for viewing build logs.

  o BREAKING CHANGE: The bst source-bundle command has been removed. The
    functionality it provided has been replaced by the `--include-build-scripts`