@@ -2,6 +2,9 @@
 buildstream 1.3.1
 =================
 
+  o BREAKING CHANGE: `Plugin.node_items` doesn't accept 'dict' values anymore.
+    Please used `Node`s instead.
+
   o BREAKING CHANGE: `node_get_member` doesn't accept 'expected_type=Mapping'
     anymore. Please use 'expected_type=dict' instead.
 
